--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@mantine/core": "4.2.2",
+    "@mantine/core": "^4.2.9",
     "@mantine/dates": "4.2.2",
-    "@mantine/hooks": "4.2.2",
+    "@mantine/hooks": "^4.2.9",
     "@mantine/next": "4.2.2",
-    "@mantine/notifications": "4.2.2",
+    "@mantine/notifications": "^4.2.9",
     "@mantine/prism": "4.2.2",
     "@modulz/radix-icons": "^4.0.0",
     "@next/bundle-analyzer": "^12.1.4",
@@ -32,7 +32,8 @@
     "next": "12.1.4",
     "prism-react-renderer": "^1.3.1",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "tabler-icons-react": "^1.48.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
