--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "next": "12.1.4",
     "prism-react-renderer": "^1.3.1",
     "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "tabler-icons-react": "^1.48.1"
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
